[package]
name = "lamellar"
version = "0.3.0"
authors = ["Ryan D. Friese <ryan.friese@pnnl.gov>", " Mark V Raugas <mark.raugas@pnnl.gov>", "Roberto Gioiosa <roberto.gioiosa@pnnl.gov>"]
edition = "2018"
description = "Lamellar is an asynchronous tasking runtime for HPC systems developed in RUST."
readme = "README.md"
repository = "https://github.com/pnnl/lamellar-runtime"
homepage = "https://github.com/pnnl/lamellar-runtime"
license-file = "LICENSE"
keywords = ["hpc","runtime","pgas","distributed","asynchronous"]
categories = ["asynchronous","concurrency", "network-programming","science"]

[dependencies]
lamellar-impl = { path = "impl" }
lamellar-prof = {path = "lamellar-prof" }
rofisys = { version ="0.1.1", optional = true  }
inventory = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
futures = "0.3"
lazy_static = "1.3.0"
crossbeam = "0.8"
rand = "0.7.3"
parking_lot = "0.9"
indexmap = "1.3" #lamellar_alloc
core_affinity = "0.5.9"
log = "0.4"
simple_logger = "1.6.0"
async-task = "4.0.2"
async-trait = "0.1.40"
async-std = "1.6.4"
async-recursion = "0.2"
libc = { version = "0.2.81", optional = true }
enum_dispatch = "0.3"
memoffset = "0.6"
shared_memory = "0.12.0"
raw_sync = "0.1"



[dev-dependencies]
matrixmultiply = "0.2.3"
rayon = "1.1"
hostname = "0.3"
#packed_simd = { version = "0.3.4", package = "packed_simd_2" } #uncomment if using nightly tool chain and want to run the am_flops example

[workspace]
members = ["impl"]



#features are strictly additive.... can't have mutual exclusitivity
[features]
enable-rofi=["rofisys","libc"]
enable-local=[]
enable-prof=["lamellar-prof/enable-prof"]
default=[]


[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true   


[lib]
name="lamellar"
path="src/lib.rs"


##------------ Bandwidth Examples -----------------##

[[example]]
name="am_bw"
path="examples/bandwidths/am_bw.rs"

[[example]]
name="am_bw_get"
path="examples/bandwidths/am_bw_get.rs"

[[example]]
name="get_bw"
path="examples/bandwidths/get_bw.rs"

[[example]]
name="put_bw"
path="examples/bandwidths/put_bw.rs"


##------------ Active Message Examples -----------------##
[[example]]
name="am_no_return"
path="examples/active_message_examples/am_no_return.rs"

[[example]]
name="am_return_usize"
path="examples/active_message_examples/am_return_usize.rs"

[[example]]
name="am_return_am"
path="examples/active_message_examples/am_return_am.rs"

[[example]]
name="am_return_am_usize"
path="examples/active_message_examples/am_return_am_usize.rs"

[[example]]
name="async_comparison"
path="examples/active_message_examples/async_comparison.rs"

[[example]]
name="recursive_am"
path="examples/active_message_examples/recursive_am.rs"

[[example]]
name="am_batch_tests"
path="examples/active_message_examples/am_batch_tests.rs"

[[example]]
name="am_local"
path="examples/active_message_examples/am_local.rs"



##------------ RDMA Examples -----------------##
[[example]]
name="put"
path="examples/rdma_examples/put.rs"

[[example]]
name="get"
path="examples/rdma_examples/get.rs"

[[example]]
name="rdma_am"
path="examples/rdma_examples/rdma_am.rs"


##------------ Team Examples -----------------##
[[example]]
name="team_am"
path="examples/team_examples/team_am.rs"

[[example]]
name="custom_team_arch"
path="examples/team_examples/custom_team_arch.rs"

##------------ Kernel Examples -----------------##
[[example]]
name="am_flops"
path="examples/kernels/am_flops.rs"

[[example]]
name="dft_proxy"
path="examples/kernels/dft_proxy.rs"

[[example]]
name="naive_gemm"
path="examples/kernels/naive_gemm.rs"

[[example]]
name="dist_gemm"
path="examples/kernels/dist_gemm.rs"


##------------ Miscellaneous Examples -----------------##
[[example]]
name="simple_ptp"
path="examples/misc/simple_ptp.rs"


##------------ experimental examples ------------------##
[[example]]
name="random_team"
path="examples/experimental/random_team.rs"

[[example]]
name="dist_array_reduce"
path="examples/experimental/dist_array_reduce.rs"


[[example]]
name="array_am"
path="examples/experimental/array_am.rs"


##------------ Darc examples ------------------##
[[example]]
name="darc"
path="examples/darc_examples/darc.rs"

