[package]
name = "lamellar-impl"
version = "0.4.1"
authors = ["Ryan D. Friese <ryan.friese@pnnl.gov>", " Mark V Raugas <mark.raugas@pnnl.gov>", "Roberto Gioiosa <roberto.gioiosa@pnnl.gov>"]
edition = "2021"
description = "Lamellar is an asynchronous tasking runtime for HPC systems developed in RUST."
readme = "../README.md"
repository = "https://github.com/pnnl/lamellar-runtime"
homepage = "https://github.com/pnnl/lamellar-runtime"
license-file = "../LICENSE"
keywords = ["hpc","runtime","pgas","distributed","asynchronous"]
categories = ["asynchronous","concurrency", "network-programming","science"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error = "1.0"
quote = "1.0"
regex = "1.3"
syn = { version = "1.0", features = ["full","extra-traits","visit-mut"] }
async-trait = "0.1.40"
futures = "0.3"
