[package]
name = "lamellar-prof"
version = "0.1.0"
authors = ["frie869 <ryan.friese@pnnl.gov>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full","extra-traits","visit-mut"] }

[features]
enable-prof=[]